--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "axios": "^0.17.1",
+    "dotenv": "^4.0.0",
+    "yelp-api-v3": "^1.5.0"
   },
   "devDependencies": {
     "got": "^11.3.0",
