--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "axios": "^0.17.1",
+    "cors-anywhere": "^0.4.3",
+    "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "axios": "^0.17.1",
-    "dotenv": "^4.0.0",
     "yelp-api-v3": "^1.5.0"
   },
   "devDependencies": {
